bison_example/y.output
Grammar

    0 $accept: S $end

    1 S: Stmt
    2  | S Stmt

    3 Stmt: T_Identifier '=' E ';'

    4 E: E '+' E
    5  | E '-' E
    6  | E '*' E
    7  | E '/' E
    8  | '-' E
    9  | T_IntConstant
   10  | T_Identifier
   11  | '(' E ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11
')' (41) 11
'*' (42) 6
'+' (43) 4
'-' (45) 5 8
'/' (47) 7
';' (59) 3
'=' (61) 3
error (256)
T_IntConstant (258) 9
T_Identifier (259) 3 10
U_neg (260)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
S (15)
    on left: 1 2, on right: 0 2
Stmt (16)
    on left: 3, on right: 1 2
E (17)
    on left: 4 5 6 7 8 9 10 11, on right: 3 4 5 6 7 8 11


state 0

    0 $accept: . S $end

    T_Identifier  shift, and go to state 1

    S     go to state 2
    Stmt  go to state 3


state 1

    3 Stmt: T_Identifier . '=' E ';'

    '='  shift, and go to state 4


state 2

    0 $accept: S . $end
    2 S: S . Stmt

    $end          shift, and go to state 5
    T_Identifier  shift, and go to state 1

    Stmt  go to state 6


state 3

    1 S: Stmt .

    $default  reduce using rule 1 (S)


state 4

    3 Stmt: T_Identifier '=' . E ';'

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 11


state 5

    0 $accept: S $end .

    $default  accept


state 6

    2 S: S Stmt .

    $default  reduce using rule 2 (S)


state 7

    9 E: T_IntConstant .

    $default  reduce using rule 9 (E)


state 8

   10 E: T_Identifier .

    $default  reduce using rule 10 (E)


state 9

    8 E: '-' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 12


state 10

   11 E: '(' . E ')'

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 13


state 11

    3 Stmt: T_Identifier '=' E . ';'
    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E

    '+'  shift, and go to state 14
    '-'  shift, and go to state 15
    '*'  shift, and go to state 16
    '/'  shift, and go to state 17
    ';'  shift, and go to state 18


state 12

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    8  | '-' E .

    $default  reduce using rule 8 (E)


state 13

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
   11  | '(' E . ')'

    '+'  shift, and go to state 14
    '-'  shift, and go to state 15
    '*'  shift, and go to state 16
    '/'  shift, and go to state 17
    ')'  shift, and go to state 19


state 14

    4 E: E '+' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 20


state 15

    5 E: E '-' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 21


state 16

    6 E: E '*' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 22


state 17

    7 E: E '/' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  go to state 23


state 18

    3 Stmt: T_Identifier '=' E ';' .

    $default  reduce using rule 3 (Stmt)


state 19

   11 E: '(' E ')' .

    $default  reduce using rule 11 (E)


state 20

    4 E: E . '+' E
    4  | E '+' E .
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E

    '*'  shift, and go to state 16
    '/'  shift, and go to state 17

    $default  reduce using rule 4 (E)


state 21

    4 E: E . '+' E
    5  | E . '-' E
    5  | E '-' E .
    6  | E . '*' E
    7  | E . '/' E

    '*'  shift, and go to state 16
    '/'  shift, and go to state 17

    $default  reduce using rule 5 (E)


state 22

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    6  | E '*' E .
    7  | E . '/' E

    $default  reduce using rule 6 (E)


state 23

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    7  | E '/' E .

    $default  reduce using rule 7 (E)
